--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -3,8 +3,19 @@
 
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
 
   padding-bottom: 64px;
 }
 
+@media screen and (max-width: 1144px) {
+  .articles__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .articles__main {
+    margin-bottom: 56px;
+  }
+}
