--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,13 +2,13 @@
   <div class="small-card__container__content">
     <div class="small-card__picture">
       <a href="#">
-        <img src="https://placehold.co/600x400/EEE/31343C" alt="">
+        <img src="{{pictureCover}}" alt="">
       </a>
     </div>
     <div class="small-card__title">
-      <span>5 de outubro de 2023</span>
+      <span>{{publishDate}}</span>
       <h2>
-        <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+        <a href="#">{{cardTitle}}</a>
       </h2>
     </div>
   </div>
